javascript/manifest/dev/js-runner-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: js-runner-2
  name: js-runner-2
  namespace: group-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: js-runner-2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: js-runner-2
    spec:
      containers:
        - image: aptopseed/js-runner-2:cb4d4a
          imagePullPolicy: Always
          name: js-runner-2
          resources: {}
status: {}
