javascript/manifest/dev/js-runner-2-svc.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: js-runner-2
  name:  js-runner-2-svc
  namespace: group-1
spec:
  selector:
    app:  js-runner-2
  type:  ClusterIP
  ports:
  - name:  map-to-app
    port: 80
    protocol: TCP
    targetPort: 3000
