javascript/manifest/dev/runneringress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: runneringress
  annotations:
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: js-runner-2
  namespace: group-1
spec:
  #Ref 
  #- https://kubernetes.github.io/ingress-nginx/examples/rewrite/
  #- https://kubernetes.github.io/ingress-nginx/user-guide/ingress-path-matching/
  ingressClassName: nginx
  rules:
  - host: tcc-01.th1.proen.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/group-1/w9-tcc231002(/|$)(.*)"
        backend:
          service:
            name: js-runner-2-svc
            port: 
              number: 80
